--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "lerrigattobot"
 version = "0.1.0"
 description = "An awesome streaming bot"
-authors = ["Enrico <lerrigatto> La Cava <me@lerrigatto.com>"]
+authors = ["Enrico La Cava <me@lerrigatto.com>"]
 license = "GPL-3.0-or-later"
 
 [tool.poetry.dependencies]
@@ -12,6 +12,8 @@ python-dotenv = "^0.17.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.12.0"
+Sphinx = "^3.5.4"
+sphinx-pyproject = "^0.1.0"
 
 [tool.poetry.scripts]
 lerrigattobot = "lerrigattobot.bot:start"
