--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ Sphinx = "^3.5.4"
 sphinx-pyproject = "^0.1.0"
 
 [tool.poetry.scripts]
-lerrigattobot = "lerrigattobot.bot:start"
+lerrigattobot = "lerrigattobot.bot:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
