--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: lerrigattobot
-          image: lerrigattobot:0.1.0
+          image: lerrigatto/lerrigattobot:0.1.0
           envFrom:
             - secretRef:
                 name: lerrigattobot-secret-1
