--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -7,6 +7,8 @@ metadata:
 resources:
   - deployment.yaml
   - namespace.yaml
+generatorOptions:
+  disableNameSuffixHash: true
 secretGenerator:
 - name: lerrigattobot-secret-1
   envs:
